; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/pci/ttpci/extr_budget.c_Set22K.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/pci/ttpci/extr_budget.c_Set22K.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.budget = type { %struct.saa7146_dev* }
%struct.saa7146_dev = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"budget: %p\0A\00", align 1
@SAA7146_GPIO_OUTHI = common dso_local global i32 0, align 4
@SAA7146_GPIO_OUTLO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.budget*, i32)* @Set22K to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Set22K(%struct.budget* %0, i32 %1) #0 {
  %3 = alloca %struct.budget*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.saa7146_dev*, align 8
  store %struct.budget* %0, %struct.budget** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.budget*, %struct.budget** %3, align 8
  %7 = getelementptr inbounds %struct.budget, %struct.budget* %6, i32 0, i32 0
  %8 = load %struct.saa7146_dev*, %struct.saa7146_dev** %7, align 8
  store %struct.saa7146_dev* %8, %struct.saa7146_dev** %5, align 8
  %9 = load %struct.budget*, %struct.budget** %3, align 8
  %10 = call i32 @dprintk(i32 2, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), %struct.budget* %9)
  %11 = load %struct.saa7146_dev*, %struct.saa7146_dev** %5, align 8
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* @SAA7146_GPIO_OUTHI, align 4
  br label %18

16:                                               ; preds = %2
  %17 = load i32, i32* @SAA7146_GPIO_OUTLO, align 4
  br label %18

18:                                               ; preds = %16, %14
  %19 = phi i32 [ %15, %14 ], [ %17, %16 ]
  %20 = call i32 @saa7146_setgpio(%struct.saa7146_dev* %11, i32 3, i32 %19)
  ret void
}

declare dso_local i32 @dprintk(i32, i8*, %struct.budget*) #1

declare dso_local i32 @saa7146_setgpio(%struct.saa7146_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
